--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -1,8 +1,10 @@
-version: v1
+version: v2
 plugins:
-  - plugin: go
+  - local: protoc-gen-go
     out: proto-buffers
     opt: paths=source_relative
-  - plugin: go-grpc
+  - local: protoc-gen-go-grpc
     out: proto-buffers
     opt: paths=source_relative
+inputs:
+  - directory: proto
